--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=oficina
 
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/teste_64
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/oficina_dev
 spring.datasource.username=root
 spring.datasource.password=admin
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -15,7 +17,8 @@ spring.mail.password=epyy dabd cnnw pxpg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-logging.level.root=INFO
-logging.level.org.springframework=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.br.oficina=DEBUG
+
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
+
+
