--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ logging.level.org.hibernate.SQL=DEBUG
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=jaquelinesv90@gmail.com
+spring.mail.username=oficinamecanicaleonildo@gmail.com
 spring.mail.password=epyy dabd cnnw pxpg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
