--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.fasterxml.jackson=DEBUG
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
