--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
+
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
 
